- Added warning line for code highlighting. - Operators cleanup and mistake corrections. - Changed the format of inserting whitespace in the source control page. - Corrected mistakes made in primitive types page, missing information about ending longs, floats and doubles with the correct prefix. Also highlighted values and data types in paragraphs.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -124,6 +124,14 @@ html[data-theme='dark'] {
   border-left: 3px solid #ff000080;
 }
 
+.code-block-warning-line {
+  background-color: #ffba0020;
+  display: block;
+  margin: 0 calc(-1 * var(--ifm-pre-padding));
+  padding: 0 var(--ifm-pre-padding);
+  border-left: 3px solid #ffba0080;
+}
+
 [data-theme='dark'] [data-rmiz-modal-overlay='visible'] {
   background-color: rgba(0 0 0 / 95%);
 }
